--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "jest --detectOpenHandles --runInBand --forceExit --verbose=false",
-    "dev": "nodemon index.js"
+    "dev": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "base64topdf": "^1.1.8",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
